--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "webpack-dev-server": "^3"
